# amnesia-client

./: .travis.yml  Cargo.toml  README.md
examples/: actix-file.rs
frontend/src/: App.css  App.js
frontend/src/components/buttons/: button.js  roundButton.js
frontend/src/components/heading/: heading.js
src/: handler.rs  main.rs  server.rs  utils.rs
src/multipart/: README.md  mod.rs
src/multipart/actix/: body.rs  error.rs  mod.rs
src/multipart/common/: client_.rs  mod.rs
static/: asset-manifest.json  index.html  precache-manifest.1f0d4e296a714794fb8537034cd4d8d9.js  precache-manifest.2f1fe368f85954684a902ffc6a1bb8ab.js  precache-manifest.44e89a04a19e21e708d396c6a7cad9a6.js  precache-manifest.7507be33ad5b67e5679d6362880efc51.js  precache-manifest.7e5035dc47a7b6f5921a52b93b4a3519.js  precache-manifest.822a5b34eb733f3f780f50bbd7b31a15.js  precache-manifest.b51a612505fd77cc1d780b471ef9ba3f.js  precache-manifest.d9db71b956807ee2fa848f644ee24ae5.js  service-worker.js
static/static/css/: main.721d4f92.chunk.css  main.721d4f92.chunk.css.map  main.7ed8dfb9.chunk.css  main.7ed8dfb9.chunk.css.map  main.a760ab27.chunk.css  main.a760ab27.chunk.css.map  main.d3f0bed6.chunk.css  main.d3f0bed6.chunk.css.map  main.d9e88ffc.chunk.css  main.d9e88ffc.chunk.css.map
static/static/js/: 2.edafd3d4.chunk.js  2.edafd3d4.chunk.js.map  main.0b5d137b.chunk.js  main.0b5d137b.chunk.js.map  main.28412884.chunk.js  main.28412884.chunk.js.map  main.69fd3304.chunk.js  main.69fd3304.chunk.js.map  main.7c33eb93.chunk.js  main.7c33eb93.chunk.js.map  main.a3487c7f.chunk.js  main.a3487c7f.chunk.js.map  main.b5594a4b.chunk.js  main.b5594a4b.chunk.js.map  main.b693a6c0.chunk.js  main.b693a6c0.chunk.js.map  main.d17ae078.chunk.js  main.d17ae078.chunk.js.map
