[package]
name = "amnesia-client"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
tokio = { version = "0.2", features = ["fs"] }
pnet = "0.26.0"
log = "0.4"
pretty_env_logger = "0.4"



[package.metadata.deb]
maintainer = "realaravinth <realaravinth@batsense.net>"
copyright = "2020, realaravinth <realaravinth@batsense.net>"
license-file = ["LICENSE", "4"]
extended-description = """\
A web interface for packet captures
"""
depends = "$auto, tshark"
section = "utility"
priority = "optional"
assets = [
    ["target/release/amnesia-client", "usr/bin/", "755"],
]
