[package]
name = "amnesia-client"
version = "0.1.0-alpha-2"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
actix-multipart = "0.2.0"
awc = "1.0.1"
actix-multipart-rfc7578 = "0.2.1"
actix-http                = "1.0"
actix = "0.9.0"

tokio = { version = "0.2", features = ["fs"] }

log = "0.4"
pretty_env_logger = "0.4"

regex = "1"
lazy_static = "1.4.0"

futures = "0.3.5"
bytes = "0.5"

http                      = "0.2"
mime                      = "0.3"
rand                      = "0.5"

[package.metadata.deb]
maintainer = "realaravinth <realaravinth@batsense.net>"
copyright = "2020, realaravinth <realaravinth@batsense.net>"
license-file = ["LICENSE", "4"]
replaces = "amnesia-client"
extended-description = """\
A web interface for packet captures
"""
depends = "$auto, tshark"
section = "utility"
priority = "optional"
assets = [
    ["target/release/amnesia-client", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
    ["static/*", "var/www/amnesia-client/static/", "644"],
	["static/static/css/*", "var/www/amnesia-client/static/static/css", "644"],
	["static/static/js/*", "var/www/amnesia-client/static/static/js/", "644"],
	["static/static/media/*", "var/www/amnesia-client/static/static/media/", "644"],
]
